# KAMPING

./: .gitignore  README.md  hsa00010.tsv  pyproject.toml
KAMPING/: main.py
KAMPING/dataset/: dataloader.py
KAMPING/embedding/: mol_scrapper.py  mol_transformer.py  utils.py
KAMPING/kegg_parser/: convert.py  network.py  pathway.py  protein_metabolite_parser.py  utils.py
KAMPING/mol/: mol_scrapper.py
KAMPING/uniprot/: parser.py  uniprot.py
documents/: notes.docx
kamping/: __init__.py  main.py  utils.py
kamping/data/: convert.py  data.py  dataloader.py  utils.py
kamping/dataset/: dataloader.py  utils.py
kamping/mol/: mol_scrapper.py  mol_transformer.py  utils.py
kamping/parser/: __init__.py  convert.py  network.py  protein_metabolite_parser.py  utils.py
kamping/uniprot/: parser.py  uniprot.py
notebooks/: KGML_processing.ipynb  get_smiles.ipynb  protein_embedding.ipynb  test.ipynb  uniprot_query.ipynb  visualization.ipynb  visualization2.ipynb
output/: hsa00010_test.tsv
src/: __main__.py  main.py
src/knext/: convert.py  genes.py  utils.py
src/parser/: MPI_parser.py  expand_by_intermidate.py  protein_metabolite_parser.py  utils.py
src/scaper/: molScraper.py
tests/: MPI_parser_test.py  test_MPI_parser.py  test_converter.py  test_data_utils.py  test_get_kgml.py  test_interaction_parser.py  test_mol_transformer.py  test_network.py  test_parser_utils.py  test_uitls.py  test_uniprot_parser.py
tests/data/: hsa00010_protein_embeddings.h5  hsa00010_test.xml  hsa_test.xml  smiles_file.tsv
tests/output/: hsa00010_test.tsv
tests/snapshots/: snap_test_converter.py  snap_test_gene_interaction_parser.py  snap_test_interaction_parser.py  snap_test_mol_transformer.py  snap_test_network.py
tutorials/: tutorial 1 Introduction.ipynb  tutorial 2. Graph neural network model.ipynb  tutorial 2. Homogenous graph neural network model.ipynb  tutorial 4. Heterogenous Graph neural network.ipynb  tutorial.ipynb  tutorial.py  tutroal 5. Metabolite embedding process.ipynb
