[tool.poetry]
name = "KAMPING"
version = "0.1"
description = "KEGG automated metabolite protein interaction network for graph-learning (KAMPING)"
authors = ["Everest Uriel Castaneda <everest_castaneda1@baylor.edu>"]
readme = "README.rst"
license = "LICENSE"
packages = [
    { include = "KAMPING", from = "." }
]

[tool.poetry.scripts]
KAMPING = "KAMPING.main:app"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.1"
click = "^8.1.3"
pandas = "*"
typer = "^0.9.0"
requests = "^2.31.0"
pathlib = "^1.0.1"
scikit-mol = "^0.3.1"
rdkit = "^2024.3.5"
numpy = "*"
unipressed = "^1.4.0"
torch-geometric = "^2.6.1"
torch = "^1.13"
h5py = "^3.12.1"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
importlib = "^1.0.4"
matplotlib = "*"
qtconsole = "^5.6.0"
jupyter = "^1.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
snapshottest = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/everest-castaneda/knext"
"Bug Tracker" = "https://github.com/everest-castaneda/knext/issues"
